# tastycode

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
CsvFileReader/: tasty.h
TextFileReader/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  TextFileReader.h  TextFileReader_profile.cpp  TextFileReader_test.cpp  vcpkg.json
TextFileReader/profile/: 100_10000.tracy  10_1000.txt  10_100000.tracy  make_sample.py
TextFileReader/tracy/: 1000_1000.tracy  1000_10000.tracy  100_100000.tracy  10_1000000.tracy  README.md
csv/: CMakeLists.txt  CMakePresets.json  Makefile
csv/src/: CsvFileReader.h  TextFileReader.h  tasty.h
csv/test/: CsvFileReader_test.cpp  TextFileReader_test.cpp  main_test.cpp
csv/test/data/: stocks_20230304.txt
